Fix bug with fun facts paragraf on smaller screen.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,7 +411,7 @@ footer {
     }
   
     #anecdote,
-    #fun-facts {
+    .fun-facts {
       font-size: 9px;
     }
   
